Remove markers and mediaElements when a new search is performed

--- a/public_src/index.html
+++ b/public_src/index.html
@@ -2,13 +2,17 @@
 <html lang="en">
 
     <head>
-        <title>Angular2-Leaflet-Starter</title>
+        <title>Bat</title>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
     </head>
 
     <body>
-        <app>Loading...</app>
+    <!--stylesheet required for angular material-->
+    <link href="../node_modules/@angular/material/prebuilt-themes/indigo-pink.css" rel="stylesheet">
+    <!-- icons for material design -->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <app>Loading...</app>
     </body>
 
 </html>
