--- a/public_src/index.html
+++ b/public_src/index.html
@@ -12,6 +12,11 @@
     <link href="../node_modules/@angular/material/prebuilt-themes/indigo-pink.css" rel="stylesheet">
     <!-- icons for material design -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
+    <!-- for intro.js -->
+    <link rel="stylesheet" href="../node_modules/intro.js/minified/introjs.min.css">
+    <script src="../node_modules/intro.js/minified/intro.min.js"></script>
+    
     <app>Loading...</app>
     </body>
 
