Added spinner to show while markers load

--- a/public_src/index.html
+++ b/public_src/index.html
@@ -16,7 +16,9 @@
     <!-- for intro.js -->
     <link rel="stylesheet" href="../node_modules/intro.js/minified/introjs.min.css">
     <script src="../node_modules/intro.js/minified/intro.min.js"></script>
-    
+
+    <!-- import spin.js-->
+    <script src="../node_modules/spin/spin.js"></script>
     <app>Loading...</app>
     </body>
 
