Added copy-webpack-plugin to copy dependencies to production folder. docs folder contains compiled app

--- a/public_src/index.html
+++ b/public_src/index.html
@@ -9,16 +9,15 @@
 
     <body>
     <!--stylesheet required for angular material-->
-    <link href="../node_modules/@angular/material/prebuilt-themes/indigo-pink.css" rel="stylesheet">
+    <link href="./prod-dependencies/indigo-pink.css" rel="stylesheet">
     <!-- icons for material design -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
     <!-- for intro.js -->
-    <link rel="stylesheet" href="../node_modules/intro.js/minified/introjs.min.css">
-    <script src="../node_modules/intro.js/minified/intro.min.js"></script>
+    <link rel="stylesheet" href="./prod-dependencies/introjs.min.css">
 
     <!-- import spin.js-->
-    <script src="../node_modules/spin/spin.js"></script>
+    <script src="./prod-dependencies/spin/spin.js"></script>-->
     <app>Loading...</app>
     </body>
 
